remove hardcoded texts

--- a/tt-playbook-frontend/src/translations/en.json
+++ b/tt-playbook-frontend/src/translations/en.json
@@ -1,5 +1,16 @@
 {
+  "languages": {
+    "en": "English",
+    "fi": "Suomi"
+  },
   "frontpage": {
     "welcome": "Welcome!"
+  },
+  "unselectedExerciseList": {
+    "select": "Select"
+  },
+  "selectedExerciseList": {
+    "unselect": "Unselect",
+    "amountOfExercises": "You have selected {{ amount }} exercises"
   }
 }
